--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 .pets-large-icon {
 	font-size: 20em;
+	margin: 2vw;
+}
+
+.grow { 
+	transition: all .2s ease-in-out; 
+}
+
+.grow:hover { 
+	transform: scale(1.1);
 }
 
 body {
